--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 export(breed)
 export(chooseChromosomes)
 export(crossover)
-export(doMutation)
 export(evaluation)
+export(mutation)
 export(popInitial)
 export(rankSelection)
 export(select)
